Fixed whitespace in styleSelector

--- a/public/styleSelector.scss
+++ b/public/styleSelector.scss
@@ -5,13 +5,23 @@
   object-fit: cover
 }
 .overlay {
-  position: relative;
-  left: 60px;
+  position: absolute;
   color: pink;
   border-left: 0;
   padding-left: 0;
   margin-left: 0;
   height: 60px;
   width: 60px;
+
+}
+.styleListContainer {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+}
+.selectedStyleContainer {
+  position: relative;
+  display: inline-block;
+  width: fit-content;
 
 }
